<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>jackson-jq-ext-module-random</artifactId>
	<name>${project.groupId}:${project.artifactId}</name>
	<packaging>bundle</packaging>
	<parent>
		<groupId>net.thisptr.jackson.jq.v2</groupId>
		<artifactId>jackson-jq-parent</artifactId>
		<version>2.0.0-SNAPSHOT</version>
	</parent>
	<dependencies>
		<dependency>
			<groupId>net.thisptr.jackson.jq.v2</groupId>
			<artifactId>jackson-jq-core</artifactId>
			<version>${project.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>net.thisptr.jackson.jq.v2</groupId>
			<artifactId>jackson-jq-spi</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>net.thisptr.jackson.jq.v2</groupId>
			<artifactId>jackson-jq-json-provider</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>net.thisptr.jackson.jq.v2</groupId>
			<artifactId>jackson-jq-json-provider-impl-jackson2</artifactId>
			<version>${project.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<executions>
					<execution>
						<id>compile-module-info</id>
						<goals>
							<goal>compile</goal>
						</goals>
						<configuration>
							<release>9</release>
							<compileSourceRoots>
								<compileSourceRoot>${project.basedir}/src/main/java9</compileSourceRoot>
							</compileSourceRoots>
							<multiReleaseOutput>true</multiReleaseOutput>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<configuration>
					<instructions>
						<Provide-Capability>osgi.serviceloader;osgi.serviceloader=net.thisptr.jackson.jq.v2.spi.module.Module;uses:="net.thisptr.jackson.jq.v2.spi.module"</Provide-Capability>
						<Require-Capability>osgi.extender;filter:="(&amp;(osgi.extender=osgi.serviceloader.registrar)(version&gt;=1.0.0)(!(version&gt;=2.0.0)))"</Require-Capability>
						<Include-Resource>META-INF/services/net.thisptr.jackson.jq.v2.spi.module.Module=${project.build.outputDirectory}/META-INF/services/net.thisptr.jackson.jq.v2.spi.module.Module</Include-Resource>
					</instructions>
					<archive>
						<manifestEntries>
							<Multi-Release>true</Multi-Release>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<sourcepath>${project.basedir}/src/main/java</sourcepath>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
